--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -21,7 +21,7 @@ jobs:
       contents: read
       id-token: write
       security-events: write
-      actions: read # REQUIRED for upload-sarif to read workflow run metadata
+      actions: read
 
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -101,7 +101,13 @@ jobs:
           exit-code: "0"
         continue-on-error: true
 
-      # BEST-EFFORT: WILL NOT FAIL DEPLOY EVEN IF GITHUB BLOCKS CODE SCANNING
+      - name: Upload Trivy SARIF artifact (always)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-sarif
+          path: trivy.sarif
+
       - name: Upload Trivy SARIF (best-effort, push-only)
         if: github.event_name == 'push'
         uses: github/codeql-action/upload-sarif@v4
@@ -126,14 +132,19 @@ jobs:
           version: v1.29.0
 
       - name: Update kubeconfig for EKS
-        run: aws eks update-kubeconfig --name "${EKS_CLUSTER_NAME}" --region "${AWS_REGION}"
+        run: |
+          aws eks update-kubeconfig \
+            --name "${EKS_CLUSTER_NAME}" \
+            --region "${AWS_REGION}"
 
       - name: Deploy updated image
         run: |
           kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" \
             "${CONTAINER_NAME}=${IMAGE_URI}"
 
-          kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=300s
+          kubectl -n "${K8S_NAMESPACE}" rollout status \
+            "deployment/${DEPLOYMENT_NAME}" \
+            --timeout=300s
 
       - name: Verify wizexercise.txt exists
         run: |
@@ -144,8 +155,12 @@ jobs:
 
           if [ -z "$POD" ]; then
             echo "Falling back to deployment selector..."
-            SELECTOR="$(kubectl -n "${K8S_NAMESPACE}" get deploy "${DEPLOYMENT_NAME}" -o jsonpath='{range $k,$v := .spec.selector.matchLabels}{printf "%s=%s," $k $v}{end}' | sed 's/,$//')"
-            POD="$(kubectl -n "${K8S_NAMESPACE}" get pods -l "${SELECTOR}" -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || true)"
+            SELECTOR="$(kubectl -n "${K8S_NAMESPACE}" get deploy "${DEPLOYMENT_NAME}" \
+              -o jsonpath='{range $k,$v := .spec.selector.matchLabels}{printf "%s=%s," $k $v}{end}' \
+              | sed 's/,$//')"
+
+            POD="$(kubectl -n "${K8S_NAMESPACE}" get pods -l "${SELECTOR}" \
+              -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || true)"
           fi
 
           if [ -z "$POD" ]; then
@@ -153,5 +168,8 @@ jobs:
             exit 1
           fi
 
-          kubectl -n "${K8S_NAMESPACE}" wait --for=condition=Ready "pod/${POD}" --timeout=120s
+          kubectl -n "${K8S_NAMESPACE}" wait \
+            --for=condition=Ready "pod/${POD}" \
+            --timeout=120s
+
           kubectl -n "${K8S_NAMESPACE}" exec "${POD}" -- cat /app/wizexercise.txt
