--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -5,24 +5,28 @@ on:
     branches: ["main"]
     paths:
       - "terraform/**"
+      - "terraform-bootstrap/**"
       - ".github/workflows/iac.yml"
   push:
     branches: ["main"]
     paths:
       - "terraform/**"
+      - "terraform-bootstrap/**"
       - ".github/workflows/iac.yml"
 
 jobs:
-  terraform_ci_safe:
-    name: Terraform fmt/validate + IaC scans (safe)
+  terraform_ci:
+    name: Terraform fmt/validate + IaC scans + plan (remote state)
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
+      id-token: write
       security-events: write
 
     defaults:
       run:
+        shell: bash
         working-directory: terraform
 
     steps:
@@ -34,11 +38,23 @@ jobs:
         with:
           terraform_version: 1.6.6
 
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Terraform fmt
         run: terraform fmt -check -recursive
 
-      - name: Terraform init (no backend)
-        run: terraform init -backend=false -input=false
+      - name: Terraform init (S3 backend)
+        run: |
+          terraform init -input=false \
+            -backend-config="bucket=${{ secrets.TFSTATE_BUCKET }}" \
+            -backend-config="key=${{ secrets.TFSTATE_KEY }}" \
+            -backend-config="region=${{ secrets.AWS_REGION }}" \
+            -backend-config="dynamodb_table=${{ secrets.TFLOCK_TABLE }}" \
+            -backend-config="encrypt=true"
 
       - name: Terraform validate
         run: terraform validate -no-color
@@ -65,9 +81,21 @@ jobs:
           framework: terraform
         continue-on-error: true
 
-      - name: Note about plan/apply
-        run: |
-          echo "Skipping terraform plan/apply in CI to avoid drift:"
-          echo "- CI runner has no kubeconfig for kubernetes provider"
-          echo "- CI does not have your local terraform state"
-          echo "Run plan/apply locally, or migrate state to S3 and add kubeconfig steps."
+      - name: Trivy config scan (soft-fail, SARIF)
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: "config"
+          scan-ref: "terraform"
+          format: "sarif"
+          output: "trivy-iac.sarif"
+          severity: "CRITICAL,HIGH,MEDIUM"
+        continue-on-error: true
+
+      - name: Upload Trivy SARIF (best-effort)
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-iac.sarif
+        continue-on-error: true
+
+      - name: Terraform plan
+        run: terraform plan -no-color -input=false
